Fix navbar and container spacing bug

--- a/css/blog.css
+++ b/css/blog.css
@@ -1,8 +1,22 @@
 @import url('https://fonts.googleapis.com/css2?family=Inconsolata:wght@200;300;400;500;600;700;800;900&display=swap');
 
-.container {
+.blog-container {
   padding-left: 10%;
   padding-right: 10%;
+}
+
+@media (min-width: 1400px) {
+  .blog-container {
+    padding-left: 20%;
+    padding-right: 20%;
+  }
+}
+
+@media (min-width: 2000px) {
+  .blog-container {
+    padding-left: 30%;
+    padding-right: 30%;
+  }
 }
 
 .rainbow {
